--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
-body {
+body { 
     background-color: lightgray;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+keyboard {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(21, calc(100%/21));
     text-align: center;
 }
 
-body > * {
+keyboard > * {
     max-width: 60px;
     height: 60px;
     display: flex;
@@ -14,6 +20,20 @@ body > * {
     background: black;
     color: white;
     border: solid white 2px;
+}
+
+input {
+    width: 100%;
+    height: 30px;
+    margin-top: 40px;
+    font-size: 16px;
+    padding: 4px 12px;
+}
+
+@media (min-width: 900px) {
+    input {
+        display: none;
+    }
 }
 
 
