--- a/style.css
+++ b/style.css
@@ -21,17 +21,17 @@ keyboard > * {
     border: solid white 2px;
 }
 
-input {
-    width: 100%;
-    height: 30px;
-    margin-top: 40px;
-    font-size: 16px;
-    padding: 4px 12px;
+h2 {
+    display: none;
 }
 
 @media (min-width: 900px) {
-    input {
+    keyboard {
         display: none;
+    }
+
+    h2 {
+        display: block;
     }
 }
 
