--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2 {
     display: none;
 }
 
-@media (min-width: 900px) {
+@media (max-width: 900px) {
     keyboard {
         display: none;
     }
